--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -3,6 +3,56 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.ColumnConstraints?>
+
+<!--<GridPane fx:controller="sample.Controller"-->
+          <!--xmlns:fx="http://javafx.com/fxml" alignment="top_center" hgap="10" vgap="10"-->
+          <!--gridLinesVisible="true">-->
+
+    <!--<padding>-->
+        <!--<Insets top="15"/>-->
+    <!--</padding>-->
+
+    <!--<columnConstraints>-->
+        <!--<ColumnConstraints percentWidth="50"/>-->
+        <!--<ColumnConstraints percentWidth="50"/>-->
+    <!--</columnConstraints>-->
+
+    <!--<Label text="ABP Clones" textFill="cornflowerblue">-->
+        <!--<font>-->
+            <!--<Font name="Times New Roman bold" size="30"></Font>-->
+        <!--</font>-->
+    <!--</Label>-->
+
+    <!--<Button text="button one" GridPane.rowIndex="1" GridPane.columnIndex="0"/>-->
+    <!--<Button text="button 2" GridPane.rowIndex="1" GridPane.columnIndex="1"/>-->
+    <!--<Button text="button 3" GridPane.rowIndex="2" GridPane.columnIndex="0"/>-->
+    <!--<Button text="button four 4" GridPane.rowIndex="3" GridPane.columnIndex="0"-->
+            <!--GridPane.columnSpan="2" GridPane.halignment="CENTER"/>-->
+
+<!--</GridPane>-->
+
+<?import javafx.scene.layout.HBox?>
+
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml">
+
+    <top>
+        <Label text="ABP Clones equipment issue"
+               BorderPane.alignment="center"
+            style="-fx-border-color: blue;"/>
+    </top>
+
+    <bottom>
+        <HBox spacing="10" alignment="TOP_RIGHT">
+            <padding>
+                <Insets bottom="10" right="10"/>
+            </padding>
+            <Button text="OK" prefWidth="90"/>
+            <Button text="Cancel" prefWidth="90"/>
+            <Button text="Help" prefWidth="90"/>
+        </HBox>
+    </bottom>
+
+</BorderPane>
