--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,11 +1,3 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.ColumnConstraints?>
-
 <!--<GridPane fx:controller="sample.Controller"-->
           <!--xmlns:fx="http://javafx.com/fxml" alignment="top_center" hgap="10" vgap="10"-->
           <!--gridLinesVisible="true">-->
@@ -33,22 +25,24 @@
 
 <!--</GridPane>-->
 
-<?import javafx.scene.layout.HBox?>
-
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 <BorderPane fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml">
 
     <top>
         <Label text="ABP Clones equipment issue"
                BorderPane.alignment="center" textFill="cornflowerblue">
             <font>
-                <Font name="Times New Roman" size="22"></Font>
+                <Font name="Times New Roman" size="22"/>
             </font>
         </Label>
     </top>
 
     <left>
-        <Label text="left label" alignment="center"/>
+        <Label id="left" text="left label" alignment="center"/>
     </left>
 
     <center>
